tests/paczka1/small_fuzzy/70703755.err
Error in line 1: A742 A742 12,2
Error in line 6: A742 A789 45,3
